--- a/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/detalhe_produto.html
@@ -10,8 +10,8 @@ Lista
 {% block blocobody %}
 
 
-<div class="card mb-3" style="max-width: 1000px;">
-    <div class="row g-0">
+<div class="card mb-3 " style="max-width: 1125px; ">
+    <div class="row g-0 ">
         <div class="col-md-4">
             <img src="{{ produto.foto }}" class="img-fluid rounded-start">
         </div>
@@ -20,65 +20,102 @@ Lista
             <div class="card-body">
                 <h5 class="card-title">{{ produto.produto_nome }}</h5>
                 <p class="card-text">Description: {{ produto.produto_texto }}</p>
-                <p class="card-text">Price: {{ produto.preco_data }}$</p>
-                <p class="card-text">Rating: {{ media }} of 5 ({{ count }})</p>
-                {% if not already_voted %}
-                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    Vote
-                </button>
-                {% endif %}
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                     aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Vote</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <form action="{% url 'loja:rate_produto' produto.id %}" enctype="multipart/form-data"
-                                      method="post">
-                                    {% csrf_token %}
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                               id="inlineRadio1" value="1">
-                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Price: {{ produto.preco_data }}$</li>
+                    <li class="list-group-item">
+                        <p class="card-text">Rating:</p>
+                        <div class="container mx-auto">
+                            <div class="row ">
+                                <div class="col-auto">
+                                    {% with ''|center:mediaRound as range %}
+                                    {% for _ in range %}
+                                    <img width="30" height="30" src="{{'/static/media/star.jpg'}}" >
+                                    {% endfor %}
+                                    {% endwith %}
+                                    {% if media == 0 %}
+                                    <p class="card-text">No rates available.</p>
+                                    {% else %}
+                                    ({{ count }} reviews)
+                                    <p class="card-text">&nbsp{{ media }} in 5</p>
+                                    {% endif %}
+
+                                </div>
+                                <div class="col-auto">
+                                    {% if not already_voted %}
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                            data-bs-target="#exampleModal">
+                                        Vote
+                                    </button>
+                                    {% endif %}
+                                    <div class="modal fade" id="exampleModal" tabindex="-1"
+                                         aria-labelledby="exampleModalLabel"
+                                         aria-hidden="true">
+                                        <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h5 class="modal-title" id="exampleModalLabel">Rate the
+                                                        product:</h5>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                            aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <form action="{% url 'loja:rate_produto' produto.id %}"
+                                                          enctype="multipart/form-data"
+                                                          method="post">
+                                                        {% csrf_token %}
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="radio"
+                                                                   name="inlineRadioOptions"
+                                                                   id="inlineRadio1" value="1">
+                                                            <label class="form-check-label" for="inlineRadio1">1</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="radio"
+                                                                   name="inlineRadioOptions"
+                                                                   id="inlineRadio2" value="2">
+                                                            <label class="form-check-label" for="inlineRadio2">2</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="radio"
+                                                                   name="inlineRadioOptions"
+                                                                   id="inlineRadio3" value="3">
+                                                            <label class="form-check-label" for="inlineRadio3">3</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="radio"
+                                                                   name="inlineRadioOptions"
+                                                                   id="inlineRadio4" value="4">
+                                                            <label class="form-check-label" for="inlineRadio4">4</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                            <input class="form-check-input" type="radio"
+                                                                   name="inlineRadioOptions"
+                                                                   id="inlineRadio5" value="5">
+                                                            <label class="form-check-label" for="inlineRadio5">5</label>
+                                                        </div>
+                                                        <br> <br>
+                                                        <button type="submit" class="btn btn-primary">Submit</button>
+                                                    </form>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary"
+                                                            data-bs-dismiss="modal">
+                                                        Close
+                                                    </button>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                               id="inlineRadio2" value="2">
-                                        <label class="form-check-label" for="inlineRadio2">2</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                               id="inlineRadio3" value="3">
-                                        <label class="form-check-label" for="inlineRadio3">3</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                               id="inlineRadio4" value="4">
-                                        <label class="form-check-label" for="inlineRadio4">4</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                               id="inlineRadio5" value="5">
-                                        <label class="form-check-label" for="inlineRadio5">5</label>
-                                    </div>
-                                    <br> <br>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </div>
+                    </li>
+                    <li class="list-group-item"><a href="{% url 'loja:adicionar_carrinho' produto.id %}" class="btn ">
+                        <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
+                    </a></li>
+                </ul>
 
-                <a href="{% url 'loja:adicionar_carrinho' produto.id %}" class="btn ">
-                    <img width="35" height="35" src="{{'/static/media/shoppingcart.png'}}">
-                </a>
+
                 {% if request.user.is_superuser %}
                 <a href="{% url 'loja:apagar_produto' produto.id %}">Delete Product</a>
                 <a href="{% url 'loja:editar_produto' produto.id %}">Edit Product</a>
