--- a/Projeto/Merch_ISCTE/loja/templates/loja/home.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/home.html
@@ -19,7 +19,7 @@ Home
     <div class="row">
         <div class="col-6">
             <h1 class="display-1" style="text-align:justify">Merch@Iscte</h1>
-            <h2 class="pt-5 pb-5" style="text-align:justify">Welcome to the merchandising store of Iscte. 
+            <h2 class="pt-5 pb-5" style="text-align:justify">Welcome to the merchandising store of Iscte.
                 <br>
                 Here you can buy products from all courses of Iscte and feel more a part of the university.
             </h2>
@@ -28,15 +28,16 @@ Home
         <div class="col-6">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="https://cdn4.oqueeoquee.com/wp-content/uploads/2012/05/imagem-em-movimento-1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-item active" data-bs-interval="2500">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Raul_Hestnes_Ferreira_ISCTE_4042.jpg/1200px-Raul_Hestnes_Ferreira_ISCTE_4042.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    {% if lista_produto %}
+                    {% for produto in lista_produto %}
+                  <div class="carousel-item" data-bs-interval="5000">
+                    <img src="{{ produto.foto }}" class="d-block w-100"  alt="...">
                   </div>
-                  <div class="carousel-item">
-                    <img src="https://cdn4.oqueeoquee.com/wp-content/uploads/2012/05/imagem-em-movimento-1.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://cdn4.oqueeoquee.com/wp-content/uploads/2012/05/imagem-em-movimento-1.jpg" class="d-block w-100" alt="...">
-                  </div>
+                    {% endfor %}
+                    {% endif %}
                 </div>
               </div>
             <!-- <h3 class="text-start">Welcome to the merchandising store of Iscte.
