--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -85,19 +85,18 @@
     </div>
 </nav>
 
-{% block search %}
-<form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
-    {% csrf_token %}
-    <input class="form-control me-2" id="produto_procura" name="produto_procura" type="Search" placeholder="Search"
-           aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
-</form>
-{% endblock %}
 {% block blocobody %}
 <div class="container-fluid">
     <div class="row">
         <div class="col">
             <div id="content" class="">
+                <form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
+                    {% csrf_token %}
+                    <input class="form-control me-2" id="produto_procura" name="produto_procura" type="Search"
+                           placeholder="Search"
+                           aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
                 {% if delete_category_error %}
                 <div class="m-5"><h5>{{ delete_category_error }}</h5></div>
                 {% endif %}
