--- a/Projeto/Merch_ISCTE/loja/templates/loja/procurar_produto.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/procurar_produto.html
@@ -9,6 +9,13 @@ Search
     <div class="row">
         <div class="col">
             <div id="content" class="">
+                <form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
+                    {% csrf_token %}
+                    <input class="form-control me-2" id="produto_procura" name="produto_procura" type="Search"
+                           placeholder="Search"
+                           aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
                 <div class="m-3"><h5>Search Results:</h5></div>
                 <div class="row justify-content-center" style="margin-left:0px;margin-right:0px;">
                     {% if lista_produto %}
