--- a/Projeto/Merch_ISCTE/loja/templates/loja/index.html
+++ b/Projeto/Merch_ISCTE/loja/templates/loja/index.html
@@ -88,7 +88,7 @@
 {% block blocobody %}
 <div class="container-fluid">
     <div class="row">
-        <div class="col">
+        <div class="col-10">
             <div id="content" class="">
                 <form action="{% url 'loja:procurar_produto' %}" class="d-flex" method="POST">
                     {% csrf_token %}
@@ -159,9 +159,9 @@
                 {% endif %}
             </div>
         </div>
-        <div class="col-2" style="background-color: lightgray; padding:0;">
+        <div class="col" style="background-color: lightgray; padding:0;">
             <nav id="sidebar">
-                <div class="p-4 pt-5" style="padding:0;">
+                <div class="p-4 pt-5">
                     {% if lista_categoria %}
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item" style="background-color: lightgray;">
